fixed current time bar overflowing behavior

--- a/src/App/Timeline/CurrentTime/CurrentTime.module.css
+++ b/src/App/Timeline/CurrentTime/CurrentTime.module.css
@@ -1,12 +1,11 @@
 .currentTime {
-  --top: calc((var(--thikness-lg) - var(--icon-size-md)) / 2);
   display: flex;
   flex-direction: column;
   align-items: center;
   position: absolute;
   opacity: var(--current-time-opacity);
-  top: var(--top);
-  height: calc(100% - var(--top) - var(--padding-sm));
+  top: 0;
+  height: calc(100% - var(--padding-sm));
   z-index: 10;
 }
 
